try/catch fixes

--- a/.github/workflows/macos-intunemac.yml
+++ b/.github/workflows/macos-intunemac.yml
@@ -74,16 +74,18 @@ jobs:
               Throw $_
           }
 
-          # Mount the Dmg file
-          If (Test-Path -Path $output) {
-              $RegEx = "\/Volumes.*"
-              $mount = hdiutil attach $output
-              $VolPath = [RegEx]::Match($mount, $RegEx).Captures.Groups[0].Value
+          # Mount the Dmg 
+          try {
+            If (Test-Path -Path $output) {
+                $RegEx = "\/Volumes.*"
+                $mount = hdiutil attach $output
+                $VolPath = [RegEx]::Match($mount, $RegEx).Captures.Groups[0].Value
 
-              # Copy the Workspace app installer to the scratch directory, removing spaces from the file name
-              $Package = Get-ChildItem -Path $VolPath -Filter "AcroRdr*.pkg" | Select-Object -First 1
-              $NewPackage = Join-Path -Path $Path -ChildPath "AcroRdrDC_MUI.png"
-              Copy-Item -Path $Package.FullName -Destination $NewPackage
+                # Copy the Workspace app installer to the scratch directory, removing spaces from the file name
+                $Package = Get-ChildItem -Path $VolPath -Filter "AcroRdr*.pkg" | Select-Object -First 1
+                $NewPackage = Join-Path -Path $Path -ChildPath "AcroRdrDC_MUI.png"
+                Copy-Item -Path $Package.FullName -Destination $NewPackage
+            }
           }
           catch {
               Write-Warning "Failed extract Pkg from Dmg."
