--- a/.github/workflows/macos-intunemac.yml
+++ b/.github/workflows/macos-intunemac.yml
@@ -97,7 +97,7 @@ jobs:
 
           # Convert the Pkg to IntuneMac format
           If (Test-Path -Path $NewPackage) {
-              . $binary -c $NewPackage -o $Path -v -n $version
+              ~/intune/IntuneAppUtil -c $NewPackage -o $Path -v -n $version
           }
       - name: Upload report
         uses: actions/upload-artifact@v2
