--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "RELEASENOTES",
         "Remediations",
         "REQUIREDSCRIPTS",
+        "stpydeviceause",
         "tzautoupdate",
         "Wordpad"
     ]
