--- a/Uev/Publish-Templates.yml
+++ b/Uev/Publish-Templates.yml
@@ -2,7 +2,8 @@ trigger:
   branches:
     include:
     - refs/main/
-    paths:
+  paths:
+    include:
     - Uev/templates
     - Uev/tests
     - Uev/Publish-Templates.yml
