--- a/Uev/Publish-Templates.yml
+++ b/Uev/Publish-Templates.yml
@@ -51,11 +51,9 @@ jobs:
   - task: AzureFileCopy@4
     displayName: "Push templates to storage account"
     inputs:
-      SourcePath: '$(Build.SourcesDirectory)\Uev\templates'
-      azureSubscription: '$(AZURE_SUBSCRIPTION)'
+      sourcePath: '$(Build.SourcesDirectory)\Uev\templates'
+      azureSubscription: 'Visual Studio Enterprise Subscription(63e8f660-f6a4-4ac5-ad4e-623268509f20)'
       destination: 'AzureBlob'
-      storage: '$(STORAGE_ACCOUNT)'
+      storage: 'stpydeviceause'
       containerName: 'uev'
       additionalArgumentsForBlobCopy: '--log-level=INFO'
-      copyFilesInParallel: true
-      cleanTargetBeforeCopy: false
