--- a/Uev/Publish-Templates.yml
+++ b/Uev/Publish-Templates.yml
@@ -51,7 +51,7 @@ jobs:
   - task: AzureFileCopy@4
     displayName: "Push templates to storage account"
     inputs:
-      sourcePath: '$(Build.SourcesDirectory)\Uev\templates'
+      sourcePath: '$(Build.SourcesDirectory)\Uev\templates\*.xml'
       azureSubscription: 'Visual Studio Enterprise Subscription(63e8f660-f6a4-4ac5-ad4e-623268509f20)'
       destination: 'AzureBlob'
       storage: 'stpydeviceause'
