--- a/Uev/Publish-Templates.yml
+++ b/Uev/Publish-Templates.yml
@@ -8,10 +8,6 @@ trigger:
     - Uev/tests
     - Uev/Publish-Templates.yml
 
-# variables:
-#   AZURE_SUBSCRIPTION: $(AZURE_SUBSCRIPTION)
-#   STORAGE_ACCOUNT: $(STORAGE_ACCOUNT)
-
 jobs:
 - job: push_templates
   pool:
@@ -52,8 +48,8 @@ jobs:
     displayName: "Push templates to storage account"
     inputs:
       sourcePath: '$(Build.SourcesDirectory)\Uev\templates\*.xml'
-      azureSubscription: 'Visual Studio Enterprise Subscription(63e8f660-f6a4-4ac5-ad4e-623268509f20)'
+      azureSubscription: $(AZURE_SUBSCRIPTION) #'Visual Studio Enterprise Subscription(63e8f660-f6a4-4ac5-ad4e-623268509f20)'
       destination: 'AzureBlob'
-      storage: 'stpydeviceause'
+      storage: $(STORAGE_ACCOUNT) #'stpydeviceause'
       containerName: 'uev'
       additionalArgumentsForBlobCopy: '--log-level=INFO'
