--- a/Uev/Publish-Templates.yml
+++ b/Uev/Publish-Templates.yml
@@ -54,7 +54,7 @@ jobs:
       verbosePreference: 'SilentlyContinue'
       errorActionPreference: 'Continue'
       failOnStderr: false
-      pwsh: true
+      pwsh: false
       workingDirectory: '$(Build.SourcesDirectory)'
 
   - task: AzureFileCopy@4
