--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,14 @@
         "defaultlayout",
         "Dism",
         "Dont",
+        "Dword",
         "EXTERNALMODULEDEPENDENCIES",
         "EXTERNALSCRIPTDEPENDENCIES",
         "HKCU",
         "HKEY",
         "ICONURI",
         "LICENSEURI",
+        "notlike",
         "PRIVATEDATA",
         "PROJECTURI",
         "RELEASENOTES",
