Working export/import scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "LICENSEURI",
         "notin",
         "notlike",
+        "odata",
         "PRIVATEDATA",
         "PROJECTURI",
         "RELEASENOTES",
